kubernet/k8s-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
      - name: ecommerce
        image: wbrymo/ecommerce:v1
        ports:
        - containerPort: 8080
