kubernet/k8s-service.yml

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: ecommerce
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
